# gameserver-web

./: .graphqlconfig.yaml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build_and_test.yml
bootstrap_testing/: game_servers.html
concept/: backend_architecture.drawio  backend_architecture.md  technology_ideas.md  use_cases.md
graphql/: rocket_testing.agq  schema.graphql
rocket_testing/: .env  .gitignore  Cargo.toml  Rocket.toml
rocket_testing/migrations/2020-04-28-145517_setup/: down.sql  up.sql
rocket_testing/src/: context.rs  db.rs  graphql_schema.rs  lib.rs  model.rs  schema.rs  types.rs
rocket_testing/src/gameserver/: control.rs  interactor.rs  macros.rs  mod.rs  model.rs  view.rs
rocket_testing/src/graphql_frontend/: game.rs  graphql.rs  id.rs  mod.rs  payload.rs  server.rs  server_status.rs
rocket_testing/src/model/: game.rs  graphql.rs  id.rs  macros.rs  mod.rs  server.rs  server_status.rs
script/: codegen  format
vue_testing/: package-lock.json  package.json
vue_testing/src/: App.vue  main.ts  vue-apollo.ts
vue_testing/src/components/: ServerCard.vue  TheNavbar.vue
vue_testing/src/models/: definitions.ts  graphql-generated.ts
vue_testing/src/router/: index.ts
vue_testing/src/store/: index.ts
vue_testing/src/store/modules/: servers.ts
vue_testing/src/utils/: constants.ts
vue_testing/src/views/: GameServer.vue  GameServerSaves.vue  GameServerSettings.vue  GameServerStatus.vue  GameServers.vue
