[package]
name = "rocket_testing"
version = "0.1.0"
authors = [
    "Maximilian Köstler <maximilian@koestler.hamburg>",
    "derFRUST <33267536+derFRUST@users.noreply.github.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
juniper_rocket = "0.5.2"

[dependencies.juniper]
version = "0.14.2"
features = ["expose-test-schema", "serde_json"]
