[package]
name = "rocket_testing"
version = "0.1.0"
authors = [
    "Maximilian Köstler <maximilian@koestler.hamburg>",
    "derFRUST <33267536+derFRUST@users.noreply.github.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.4"
rocket_cors = "0.5.1"

[dependencies.diesel]
version = "1.4.4"
features = ["r2d2", "sqlite"]